# seq_impulse

./: Cargo.toml
examples/: rigid.rs
src/: lib.rs  solve.rs
