[package]
name = "seq_impulse"
version = "0.1.0"
authors = ["Ken <kenakioreed@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon="*"
axgeom = "1.6"
duckduckgeo={git="https://github.com/tiby312/duckduckgeo"}
dinotree_alg={git="https://github.com/tiby312/dinotree_alg"}
